[tool.poetry]
name = "receptor"
version = "0.1.0"
description = ""
authors = ["Matthew Jones <matburt@redhat.com>", "Jesse Jaggars <jjaggars@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dateutil = "^2.8.1"
prometheus-client = "^0.7.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"
flake8 = "^3.7.9"
pyyaml = "^5.2"
wait-for = "^1.1.1"
requests = "^2.22.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
