[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
authors = ["Matthew Jones <matburt@redhat.com>", "Jesse Jaggars <jjaggars@redhat.com>"]
description = "A flexible multi-service relayer with remote execution and orchestration capabilities linking controllers with executors across a mesh of nodes."
license = "Apache-2.0"
name = "receptor"
repository = "https://github.com/project-receptor/receptor"
version = "1.0.0"

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
prometheus_client = "^0.7.1"
python = "^3.6"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
attrs = "^19.3.0"
click = "^7.0"
flake8 = "^3.7.9"
pylint = "^2.4.4"
pyparsing = "^2.4.5"
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"
pyyaml = "^5.2"
requests = "^2.22.0"
wait-for = "^1.1.1"
receptor-affinity = { git = "https://github.com/project-receptor/affinity.git" }
tox = "^3.14.5"
yamllint = "^1.20.0"

[tool.poetry.scripts]
receptor = 'receptor.__main__:main'
